# RevUtil

./: pyproject.toml  requirements.txt
demo/: app_V2.py  inference_engine_V2.py  review_assistant_api.py
