[tool.poetry]
name = "revutil"
version = "0.1.0"
description = "Fork: The Good, the Bad and the Constructive: Automatically Measuring Peer Review's Utility for Authors"
authors = ["Kirill Chirkunov <kirill.chirkunov@gmail.com>"]
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core ML / NLP
accelerate = "*"
datasets = "*"
evaluate = "*"
transformers = "*"
trl = "*"
peft = "*"
torch = "*"
torchaudio = "*"
torchvision = "*"
safetensors = "*"
tokenizers = "*"
sentencepiece = "*"

numpy = "*"
scipy = "*"
scikit-learn = "*"
pandas = "*"
numba = "*"
numexpr = "*"
regex = "*"
nltk = "*"

# Metrics / eval helpers
rouge-score = "*"
sacrebleu = "*"
krippendorff = "*"
bert-score = "*"

# LLM + serving / apps
openai = "*"
tiktoken = "*"
litellm = "*"
fastapi = "*"
uvicorn = "*"
gradio = "*"
httpx = "*"
aiohttp = "*"
aiohttp-cors = "*"
aiolimiter = "*"
uvloop = "*"
watchfiles = "*"
websockets = "*"

# Experimentation / tooling used directly
deepspeed = "*"
fastchat = "*"
ray = "*"
wandb = "*"
huggingface-hub = "*"

# Data / file / formats
pyarrow = "*"
openpyxl = "*"
XlsxWriter = "*"
pillow = "*"
opencv-python-headless = "*"
lxml = "*"
beautifulsoup4 = "*"
jsonlines = "*"
PyYAML = "*"
python-dotenv = "*"
pathvalidate = "*"

# Misc utilities that are commonly imported directly
rich = "*"
tqdm = "*"
diskcache = "*"
portalocker = "*"
psutil = "*"
pycryptodome = "*"
pycountry = "*"
pybind11 = "*"
RapidFuzz = "*"
tenacity = "*"
packaging = "*"
sympy = "*"
networkx = "*"
tabulate = "*"
smart-open = "*"
xxhash = "*"
zstandard = "*"

# Optional / project-specific (keep if you actually use them)
argilla = "*"
openreview-py = "*"
outlines = "*"
lm-format-enforcer = "*"
prometheus-eval = "*"
prometheus-fastapi-instrumentator = "*"
sqlite-utils = "*"
sqlitedict = "*"
textual = "*"
tld = "*"
llm = "*"
gguf = "*"
GitPython = "*"
memray = "*"
py-spy = "*"
py-cpuinfo = "*"
inquirerpy = "*"
colorama = "*"
colorful = "*"
blake3 = "*"
click = "*"
cloudpickle = "*"
dill = "*"
distro = "*"
einops = "*"
hjson = "*"
lark = "*"
more-itertools = "*"
msgpack = "*"
msgspec = "*"
standardwebhooks = "*"
sentry-sdk = "*"
tqdm-multiprocess = "*"
python-ulid = "*"
uc-micro-py = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
coverage = "*"
mypy = "*"
pre-commit = "*"
debugpy = "*"
ipykernel = "*"
ipython = "*"
ipywidgets = "*"
jupyterlab = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
